# bee-dog-engine

./: CMakeLists.txt  README.md
assets/: save.json
editor/: component_registrar.hpp  editor.cpp  editor.hpp  editor_systems.hpp  inspector.hpp  scene_hierarchy.hpp
engine/: components.cpp  components.hpp  engine.cpp  engine.hpp  prefabs.cpp  prefabs.hpp  resources.cpp  resources.hpp  serializer.cpp  serializer.hpp  spatial_hash.cpp  spatial_hash.hpp  systems.cpp  systems.hpp
example/: CMakeLists.txt
example/include/: components.hpp  engine.hpp  prefabs.hpp  resources.hpp  serializer.hpp  spatial_hash.hpp  systems.hpp
example/src/: main.cpp
scripts/: create_project.py  example_CMakeLists.txt  example_main.txt
src/: components.hpp  engine.hpp  main.cpp  prefabs.hpp  singletons.hpp  systems.hpp
src/imgui/: rlImGui.h
